--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 name = "suricata-notify"
-version = "0.1.0"
+version = "0.2.0"
 description = "✨ A tool to send notifications from Suricata to anywhere "
 license = "MIT"
 repository = "https://github.com/w1ltshire/suricata-notify/"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 async-trait = "0.1.88"
+clap = { version = "4.5.41", features = ["derive"] }
+config = "0.15.13"
 env_logger = "0.11.8"
 futures = "0.3.31"
 lazy_static = "1.5.0"
