feat!: backends initialization using config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2024"
 anyhow = "1.0.98"
 async-trait = "0.1.88"
 clap = { version = "4.5.41", features = ["derive"] }
-config = "0.15.13"
+config = { version = "0.15.13", features = ["json"] }
 env_logger = "0.11.8"
 futures = "0.3.31"
 lazy_static = "1.5.0"
