--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "suricata-notify"
-version = "0.2.0"
+version = "0.3.0"
 description = "✨ A tool to send notifications from Suricata to anywhere "
 license = "MIT"
 repository = "https://github.com/w1ltshire/suricata-notify/"
@@ -13,10 +13,12 @@ clap = { version = "4.5.41", features = ["derive"] }
 config = { version = "0.15.13", features = ["json"] }
 env_logger = "0.11.8"
 futures = "0.3.31"
+handlebars = "6.3.2"
 lazy_static = "1.5.0"
 log = "0.4.27"
 notify = "8.1.0"
 once_cell = "1.21.3"
+reqwest = { version = "0.12.22", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
 tokio = { version = "1.46.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
