--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ lazy_static = "1.5.0"
 log = "0.4.27"
 notify = "8.1.0"
 once_cell = "1.21.3"
-reqwest = { version = "0.12.22", features = ["json"] }
+reqwest = { version = "0.12.22", features = ["json", "rustls-tls", "rustls-tls-webpki-roots"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.141"
 tokio = { version = "1.46.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
+webpki-roots = "1.0.2"
