ops: fix `Dockerfile
When attempting to pull the newly published image `unsupported media type application/vnd.buildkit.cacheconfig.v0` error was raised by `docker compose pull`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     container_name: suricata-notify
     restart: always
     volumes:
-      - path to eve.json:/etc/eve.json
+      - /home/corruptmemory/misc/temp/eve.json:/etc/eve.json
       - ./config.toml:/etc/suricata-notify.toml
