--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,5 @@ services:
     container_name: suricata-notify
     restart: always
     volumes:
-      - /home/corruptmemory/misc/temp/eve.json:/etc/eve.json
+      - path to eve.json:/etc/eve.json
       - ./config.toml:/etc/suricata-notify.toml
